--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -4,11 +4,10 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "vitest"
   },
-  "dependencies": {},
   "devDependencies": {
-    "typescript": "^4.0.0",
-    "jest": "^26.0.0"
+    "typescript": "5.9.2",
+    "vitest": "4.0.0-beta.7"
   }
 }
